# local-device-portal

./: .gitignore  AGENTS.md  CONTRIBUTING.md  MVPDETAILS.md  README.md  SECURITY.md
.github/workflows/: zephyr-build.yml
arduino/: README.md
arduino/local_device_portal/: local_device_portal.ino  portal_actions.h  portal_config.h  portal_forms.h  portal_status_card.h  (+3 more)
docs/: architecture.md  zephyr-added.md  zephyr-branch-note.md  zephyr-branch-ready.md  zephyr-build.md  zephyr-commands.md  zephyr-done.md  zephyr-final-branch.md  zephyr-final-marker.md  zephyr-folder.md  zephyr-implementation.md  zephyr-last-note.md  zephyr-marker.md  zephyr-notes.md  zephyr-one-more.md  zephyr-plan.md  zephyr-pr-note.md  zephyr-ready.md  zephyr-review.md  zephyr-runtime-checklist.md  zephyr-scope.md  zephyr-submit.md  zephyr-validation.md
scripts/: README.md  build-upload-arduino.sh  build-zephyr.sh  setup-zephyr-workspace.md
zephyr/: ARDUINO_PARITY.md  README.md  west.yml
zephyr/local_device_portal/: BUILDING.md  CMakeLists.txt  NEXT.md  NOTES.md  OVERVIEW.md  PORTAL_FLOW.md  README.md  README_BUILD.md  README_NOTES.md  STATUS.md  VERSION  prj.conf  sample.yaml
zephyr/local_device_portal/boards/: README.md  esp32_devkitc_esp32_procpu.conf  esp8684_devkitm.conf  xiao_esp32c6_esp32c6_hpcore.conf
zephyr/local_device_portal/src/: credential_store.c  credential_store.h  main.c  portal_config.h  portal_dns.c  portal_dns.h  portal_http.c  portal_http.h  portal_mdns.c  portal_mdns.h  portal_render.c  portal_render.h  portal_state.c  portal_state.h  wifi_manager.c  wifi_manager.h
(+3 files in other folders)
